apps/production/menu-web/base/app.yaml
# 2. EL DEPLOYMENT (Ahora usa el ConfigMap)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-app-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mi-app-web
  template:
    metadata:
      labels:
        app: mi-app-web
    spec:
      containers:
      - name: mi-app-web-container
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      # Definimos de dónde viene ese volumen
      volumes:
      - name: html-volume
        configMap:
          name: mi-app-html
---
# 3. EL SERVICIO INTERNO
apiVersion: v1
kind: Service
metadata:
  name: mi-app-service
spec:
  type: ClusterIP
  selector:
    app: mi-app-web
  ports:
    - port: 80
      targetPort: 80
---
# 4. EL RECPCIONISTA (Ingress)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-app-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: laboratorio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-app-service
            port:
              number: 80
